# unigateway

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.sh
.cursor/skills/unigateway/: SKILL.md
.github/workflows/: release.yml  rust.yml
docs/: README.md  admin-refactor-plan.md  app-modules-flat.md  claude_code_streaming_test.md  cli-design.md  config-file-format.md  detailed-architecture-analysis.md  directory-structure.md  embedder-guide.md  llm-connector-issues-summary.md  llm-connector-responses-requirements.md  minimax-llm-connector-report.md  openclaw-integration-example.md  openhub-gateway-migration-plan.md  personal-ai-user-architecture.md  personal-ai-user-development-plan.md  project-architecture.md  refactor-summary.md  unigateway-core-api-draft.md  unigateway-core-implementation-plan.md  unigateway-gateway-runtime-design.md  unigateway-runtime-api-sketch.md  usage-scenarios-and-routing-design.md
docs/design/: admin.md  arch.md  cli.md  protocol-conversion.md  queue.md  scheduling.md
docs/dev/: embed-sdk.md  local-gateway.md  memory.md  openclaw.md  public-api-typing.md  refactor-baseline.md  roadmap.md
docs/guide/: config.md  embed.md  embedder_patterns.md  providers.md  reasoning.md
scripts/: test-deepseek-minimax.sh  test-moonshot.sh
skills/: SKILL.md  openapi.yaml
src/: api_key.rs  app.rs  authz.rs  cli.rs  config.rs  dto.rs  gateway.rs  lib.rs  main.rs  mcp.rs  middleware.rs  mutations.rs  protocol.rs  provider.rs  queries.rs  routing.rs  runtime.rs  runtime_host_adapter.rs  sdk.rs  server.rs  service.rs  storage.rs  system.rs  types.rs  upgrade.rs
src/app/: admin.rs  gateway.rs  storage.rs  types.rs
src/app/admin/: pages.rs  partials.rs  render.rs  shell.rs
src/cli/: diagnostics.rs  guide.rs  modes.rs  process.rs  quickstart.rs  render.rs
src/cli/render/: integrations.rs  routes.rs
src/config/: admin.rs  core_sync.rs  select.rs  store.rs
src/gateway/: chat.rs  core_adapter.rs  core_bridge.rs  legacy_runtime.rs  responses_compat.rs  streaming.rs  support.rs
src/gateway/support/: execution_flow.rs  mod.rs  request_flow.rs  response_flow.rs
src/handlers/: auth.rs  chat.rs  health.rs  mod.rs
src/protocol/: client.rs  messages.rs
src/runtime/: app_host.rs  context.rs  errors.rs
src/runtime_host_adapter/: app_host.rs
src/setup/: mod.rs  prompts.rs  registry.rs
src/ui/: mod.rs  templates.rs
unigateway/: Cargo.toml  README.md
unigateway-cli/: Cargo.toml
unigateway-config/: Cargo.toml
unigateway-core/: Cargo.toml
unigateway-core/src/: conversion.rs  drivers.rs  engine.rs  error.rs  feedback.rs  hooks.rs  lib.rs  request.rs  response.rs  retry.rs  routing.rs
unigateway-core/src/conversion/: blocks.rs  messages.rs  tests.rs  tool_calls.rs  tools.rs
unigateway-core/src/engine/: aimd.rs  execution.rs  mod.rs  reporting.rs  tests.rs
unigateway-core/src/engine/execution/: chat.rs  embeddings.rs  mod.rs  responses.rs  support.rs
unigateway-core/src/engine/tests/: mod.rs  proxy.rs  retries.rs  routing.rs  streaming.rs  support.rs
unigateway-core/src/protocol/: anthropic.rs  mod.rs  openai.rs
unigateway-core/src/protocol/anthropic/: driver.rs  mod.rs  parsing.rs  requests.rs  streaming.rs  tests.rs
unigateway-core/src/protocol/openai/: driver.rs  mod.rs  parsing.rs  requests.rs  streaming.rs  tests.rs
unigateway-host/: Cargo.toml
unigateway-host/src/core/: dispatch.rs  tests.rs
unigateway-host/src/core/tests/: dispatch.rs  mod.rs  routing.rs  support.rs
unigateway-host/src/core/tests/rendering/: completed.rs  mod.rs  openai_adapter.rs  stream_renderer.rs
unigateway-protocol/: Cargo.toml
unigateway-protocol/src/: lib.rs  requests.rs  responses.rs
unigateway-protocol/src/responses/: aggregator.rs  anthropic_stream.rs  openai_chat.rs  reasoning_text.rs  render.rs  tests.rs
unigateway-runtime/: Cargo.toml
unigateway-runtime/src/: core.rs  flow.rs  host.rs  lib.rs  protocol.rs  status.rs
unigateway-runtime/src/core/: embeddings.rs  mod.rs  responses.rs  targeting.rs  tests.rs
unigateway-runtime/src/core/chat/: mod.rs  streaming.rs
unigateway-sdk/: Cargo.toml  README.md
unigateway-sdk/examples/: anthropic_tools_probe.rs  openai_passthrough.rs
unigateway/src/: lib.rs
