[workspace]
members = [
    "unigateway-core",
    "unigateway-protocol",
    "unigateway-host",
    "unigateway-config",
    "unigateway-sdk",
    "unigateway",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
unigateway-core = { version = "1.6.0", path = "unigateway-core" }
unigateway-config = { version = "1.6.0", path = "unigateway-config" }
unigateway-host = { version = "1.6.0", path = "unigateway-host" }
unigateway-protocol = { version = "1.6.0", path = "unigateway-protocol" }
unigateway-sdk = { version = "1.6.0", path = "unigateway-sdk" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
