[package]
name = "unigateway-cli"
version = "1.5.2"
edition = "2024"
rust-version = "1.92"
description = "Clap command surface and CLI argument types for UniGateway."
license = "MIT"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.0"
console = "0.16.3"
dialoguer = "0.12.0"
dirs = "6.0.0"
hex = "0.4"
indicatif = "0.18.4"
llm_providers = "0.8.1"
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
toml = "0.8"
unigateway-config.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }