[package]
name = "unigateway-config"
version = "2.0.1"
edition = "2024"
rust-version = "1.92"
description = "Configuration persistence, admin mutation, and core pool projection for UniGateway."
license = "MIT"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
anyhow.workspace = true
llm_providers = "0.8.1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
toml = "0.8"
tracing.workspace = true
unigateway-core.workspace = true

[dev-dependencies]
tempfile = "3.27.0"