[package]
name = "unigateway-core"
version = "2.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "Core in-memory LLM proxy and scheduling engine for UniGateway"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
futures-core = "0.3"
futures-util.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"