[package]
name = "unigateway-host"
version = "1.8.0"
edition = "2024"
rust-version = "1.92"
description = "Reusable host contracts and compatibility surface for UniGateway embedders."
license = "MIT"
repository = "https://github.com/EeroEternal/unigateway"
readme = "README.md"

[features]
testing = []

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures-util.workspace = true
http = "1"
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
unigateway-core.workspace = true
unigateway-protocol.workspace = true