[package]
name = "unigateway-protocol"
version = "2.0.1"
edition = "2024"
rust-version = "1.92"
description = "Reusable protocol parsing and response rendering for UniGateway."
license = "MIT"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures-util.workspace = true
http = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
unigateway-core.workspace = true
