[package]
name = "unigateway-runtime"
version = "0.10.2"
edition = "2024"
rust-version = "1.92"
description = "Reusable runtime contracts and compatibility surface for UniGateway embedders."
license = "MIT"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
futures-util = "0.3"
http = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
unigateway-core = { path = "../unigateway-core" }