[package]
name = "unigateway-runtime"
version = "1.2.1"
edition = "2024"
rust-version = "1.92"
description = "Reusable runtime contracts and compatibility surface for UniGateway embedders."
license = "MIT"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
http = "1"
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
unigateway-core = { version = "1.2.1", path = "../unigateway-core" }